# help-to-buy-monte-carlo

./: .gitignore  CLAUDE.md  README.md  activate.sh  boe_mortgage_search.html  generate_cpi_histogram.py  generate_mortgage_histogram.py  generate_property_histogram.py  main.py  process_cpi_data.py  process_mortgage_data.py  process_property_data.py  pyproject.toml  requirements.txt  uk_cpi_annual_rates.csv  uk_cpi_historical_complete.csv  uk_property_changes_inner_london.csv  uk_property_changes_south_east.csv
.claude/: settings.local.json
datasets/: cpih_overall_index.csv  historical_cpi_annual_rates.csv  ons_mortgage_rates.xlsx  uk_cpi_monthly_changes.csv  uk_historical_cpi_rates.csv  uk_mortgage_changes_fred_historical.csv  uk_mortgage_monthly_changes.csv  uk_mortgage_rates_complete.csv  uk_mortgage_rates_fred.csv  uk_property_changes_london.csv  uk_property_changes_outer_london.csv  uk_property_monthly_changes.csv  uk_property_prices_complete.csv
scripts/: generate_cpi_histogram.py  generate_mortgage_histogram.py  generate_property_histogram.py  process_cpi_data.py  process_mortgage_data.py  process_property_data.py
src/: cli.py
src/config/: simulation_config.py
src/data/: loaders.py  samplers.py
src/models/: financial.py  monte_carlo.py
src/visualization/: formatters.py  interactive_plots.py  static_plots.py
