[project]
name = "help-to-buy-monte-carlo"
version = "0.1.0"
description = "Monte Carlo simulation for UK Help-to-Buy equity loan risk analysis using historical economic data"
authors = [
    {name = "laurenkt", email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["monte-carlo", "help-to-buy", "financial-modeling", "uk-housing", "risk-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0", 
    "tqdm>=4.60.0",
]
